objects/BW_Status_Summary__c.object
<CustomObject>
    <fields>
        <fullName>BW_Budget_Total__c</fullName>
        <label>Budget Total</label>
        <summarizedField>BW_Status_Indicator__c.BW_Budget_Value__c</summarizedField>
        <summaryForeignKey>BW_Status_Indicator__c.BW_Status_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BW_Heat_Index__c</fullName>
        <formula>if(BW_Indicator_Count__c &gt; 0,((BW_Rating_Total__c - BW_Minimum_Rating__c)/(BW_Maximum_Rating__c - BW_Minimum_Rating__c))*100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Heat Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Indicator_Count__c</fullName>
        <label>Status Indicator Count</label>
        <summaryForeignKey>BW_Status_Indicator__c.BW_Status_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BW_Maximum_Rating__c</fullName>
        <formula>BW_Indicator_Count__c *  $CustomMetadata.BW_Configuration_Setting__mdt.BW_Bellwether_Settings.BW_Rating_Categories__c  *  $CustomMetadata.BW_Configuration_Setting__mdt.BW_Bellwether_Settings.BW_Rating_Maximum_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Minimum_Rating__c</fullName>
        <formula>BW_Indicator_Count__c *  $CustomMetadata.BW_Configuration_Setting__mdt.BW_Bellwether_Settings.BW_Rating_Categories__c * $CustomMetadata.BW_Configuration_Setting__mdt.BW_Bellwether_Settings.BW_Rating_Minimum_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Rating_Total__c</fullName>
        <formula>BW_Scope_Total__c  + BW_Budget_Total__c + BW_Schedule_Total__c +  BW_Resource_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BW_Resource_Total__c</fullName>
        <label>Resource Total</label>
        <summarizedField>BW_Status_Indicator__c.BW_Resources_Value__c</summarizedField>
        <summaryForeignKey>BW_Status_Indicator__c.BW_Status_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BW_Schedule_Total__c</fullName>
        <label>Schedule Total</label>
        <summarizedField>BW_Status_Indicator__c.BW_Schedule_Value__c</summarizedField>
        <summaryForeignKey>BW_Status_Indicator__c.BW_Status_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BW_Scope_Total__c</fullName>
        <label>Scope Total</label>
        <summarizedField>BW_Status_Indicator__c.BW_Scope_Value__c</summarizedField>
        <summaryForeignKey>BW_Status_Indicator__c.BW_Status_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BW_Week_Ending__c</fullName>
        <label>Week Ending</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Status Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BW_Week_Ending__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Status Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>